welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: not found: value b
  return b} 
         ^